--- a/package.json
+++ b/package.json
@@ -35,19 +35,10 @@
     "@vaadin/grid": "24.4.0-alpha13",
     "@vaadin/grid-pro": "24.4.0-alpha13",
     "@vaadin/hilla-frontend": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-cli": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-core": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-utils": "24.4.0-alpha4",
-    "@vaadin/hilla-lit-form": "24.4.0-alpha3",
-    "@vaadin/hilla-react-auth": "24.4.0-alpha3",
-    "@vaadin/hilla-react-crud": "24.4.0-alpha3",
-    "@vaadin/hilla-react-form": "24.4.0-alpha3",
+    "@vaadin/hilla-lit-form": "24.4.0-alpha4",
+    "@vaadin/hilla-react-auth": "24.4.0-alpha4",
+    "@vaadin/hilla-react-crud": "24.4.0-alpha4",
+    "@vaadin/hilla-react-form": "24.4.0-alpha4",
     "@vaadin/horizontal-layout": "24.4.0-alpha13",
     "@vaadin/icon": "24.4.0-alpha13",
     "@vaadin/icons": "24.4.0-alpha13",
@@ -106,6 +97,15 @@
     "@rollup/pluginutils": "5.1.0",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
+    "@vaadin/hilla-generator-cli": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-core": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha4",
+    "@vaadin/hilla-generator-utils": "24.4.0-alpha4",
     "@vitejs/plugin-react": "4.2.1",
     "async": "3.2.5",
     "glob": "10.3.10",
@@ -121,20 +121,72 @@
     "workbox-precaching": "7.0.0"
   },
   "overrides": {
-    "@vaadin/bundles": "$@vaadin/bundles",
-    "@vaadin/icon": "$@vaadin/icon",
-    "@vaadin/icons": "$@vaadin/icons",
-    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
-    "@vaadin/tooltip": "$@vaadin/tooltip",
-    "@vaadin/common-frontend": "$@vaadin/common-frontend",
-    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
-    "lit": "$lit",
-    "@polymer/polymer": "$@polymer/polymer",
     "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
     "classnames": "$classnames",
-    "react": "$react",
-    "react-dom": "$react-dom",
-    "react-router-dom": "$react-router-dom",
+    "@types/react-dom": "$@types/react-dom",
+    "@types/react": "$@types/react",
+    "@vaadin/bundles": "$@vaadin/bundles",
+    "@vaadin/a11y-base": "$@vaadin/a11y-base",
+    "@vaadin/accordion": "$@vaadin/accordion",
+    "@vaadin/app-layout": "$@vaadin/app-layout",
+    "@vaadin/avatar": "$@vaadin/avatar",
+    "@vaadin/avatar-group": "$@vaadin/avatar-group",
+    "@vaadin/button": "$@vaadin/button",
+    "@vaadin/checkbox": "$@vaadin/checkbox",
+    "@vaadin/checkbox-group": "$@vaadin/checkbox-group",
+    "@vaadin/combo-box": "$@vaadin/combo-box",
+    "@vaadin/component-base": "$@vaadin/component-base",
+    "@vaadin/confirm-dialog": "$@vaadin/confirm-dialog",
+    "@vaadin/context-menu": "$@vaadin/context-menu",
+    "@vaadin/custom-field": "$@vaadin/custom-field",
+    "@vaadin/date-picker": "$@vaadin/date-picker",
+    "@vaadin/date-time-picker": "$@vaadin/date-time-picker",
+    "@vaadin/details": "$@vaadin/details",
+    "@vaadin/dialog": "$@vaadin/dialog",
+    "@vaadin/email-field": "$@vaadin/email-field",
+    "@vaadin/field-base": "$@vaadin/field-base",
+    "@vaadin/field-highlighter": "$@vaadin/field-highlighter",
+    "@vaadin/form-layout": "$@vaadin/form-layout",
+    "@vaadin/grid": "$@vaadin/grid",
+    "@vaadin/horizontal-layout": "$@vaadin/horizontal-layout",
+    "@vaadin/icon": "$@vaadin/icon",
+    "@vaadin/icons": "$@vaadin/icons",
+    "@vaadin/input-container": "$@vaadin/input-container",
+    "@vaadin/integer-field": "$@vaadin/integer-field",
+    "@vaadin/item": "$@vaadin/item",
+    "@vaadin/list-box": "$@vaadin/list-box",
+    "@vaadin/lit-renderer": "$@vaadin/lit-renderer",
+    "@vaadin/login": "$@vaadin/login",
+    "@vaadin/menu-bar": "$@vaadin/menu-bar",
+    "@vaadin/message-input": "$@vaadin/message-input",
+    "@vaadin/message-list": "$@vaadin/message-list",
+    "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
+    "@vaadin/notification": "$@vaadin/notification",
+    "@vaadin/number-field": "$@vaadin/number-field",
+    "@vaadin/overlay": "$@vaadin/overlay",
+    "@vaadin/password-field": "$@vaadin/password-field",
+    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
+    "@vaadin/progress-bar": "$@vaadin/progress-bar",
+    "@vaadin/radio-group": "$@vaadin/radio-group",
+    "@vaadin/scroller": "$@vaadin/scroller",
+    "@vaadin/select": "$@vaadin/select",
+    "@vaadin/side-nav": "$@vaadin/side-nav",
+    "@vaadin/split-layout": "$@vaadin/split-layout",
+    "@vaadin/tabs": "$@vaadin/tabs",
+    "@vaadin/tabsheet": "$@vaadin/tabsheet",
+    "@vaadin/text-area": "$@vaadin/text-area",
+    "@vaadin/text-field": "$@vaadin/text-field",
+    "@vaadin/time-picker": "$@vaadin/time-picker",
+    "@vaadin/tooltip": "$@vaadin/tooltip",
+    "@vaadin/upload": "$@vaadin/upload",
+    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
+    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "@vaadin/router": "$@vaadin/router",
+    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
+    "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
+    "@vaadin/virtual-list": "$@vaadin/virtual-list",
+    "@vaadin/react-components": "$@vaadin/react-components",
     "@vaadin/board": "$@vaadin/board",
     "@vaadin/charts": "$@vaadin/charts",
     "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
@@ -142,82 +194,21 @@
     "@vaadin/grid-pro": "$@vaadin/grid-pro",
     "@vaadin/map": "$@vaadin/map",
     "@vaadin/rich-text-editor": "$@vaadin/rich-text-editor",
-    "@types/react-dom": "$@types/react-dom",
-    "@types/react": "$@types/react",
-    "@vaadin/form-layout": "$@vaadin/form-layout",
-    "@vaadin/checkbox-group": "$@vaadin/checkbox-group",
-    "@vaadin/list-box": "$@vaadin/list-box",
-    "@vaadin/upload": "$@vaadin/upload",
-    "@vaadin/app-layout": "$@vaadin/app-layout",
-    "@vaadin/integer-field": "$@vaadin/integer-field",
-    "@vaadin/select": "$@vaadin/select",
-    "@vaadin/confirm-dialog": "$@vaadin/confirm-dialog",
-    "@vaadin/grid": "$@vaadin/grid",
-    "@vaadin/tabsheet": "$@vaadin/tabsheet",
-    "@vaadin/text-area": "$@vaadin/text-area",
-    "@vaadin/context-menu": "$@vaadin/context-menu",
-    "@vaadin/password-field": "$@vaadin/password-field",
-    "@vaadin/date-time-picker": "$@vaadin/date-time-picker",
-    "@vaadin/progress-bar": "$@vaadin/progress-bar",
-    "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
-    "proj4": "$proj4",
-    "@vaadin/time-picker": "$@vaadin/time-picker",
-    "@vaadin/number-field": "$@vaadin/number-field",
-    "@vaadin/avatar-group": "$@vaadin/avatar-group",
-    "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
-    "@vaadin/login": "$@vaadin/login",
-    "@vaadin/side-nav": "$@vaadin/side-nav",
-    "@vaadin/details": "$@vaadin/details",
-    "@vaadin/button": "$@vaadin/button",
-    "@vaadin/accordion": "$@vaadin/accordion",
-    "@vaadin/avatar": "$@vaadin/avatar",
-    "@vaadin/radio-group": "$@vaadin/radio-group",
-    "@vaadin/horizontal-layout": "$@vaadin/horizontal-layout",
-    "date-fns": "$date-fns",
-    "@vaadin/virtual-list": "$@vaadin/virtual-list",
-    "@vaadin/combo-box": "$@vaadin/combo-box",
-    "@vaadin/menu-bar": "$@vaadin/menu-bar",
-    "@vaadin/message-list": "$@vaadin/message-list",
-    "@vaadin/custom-field": "$@vaadin/custom-field",
-    "@vaadin/field-highlighter": "$@vaadin/field-highlighter",
-    "@vaadin/date-picker": "$@vaadin/date-picker",
-    "@vaadin/dialog": "$@vaadin/dialog",
-    "@vaadin/item": "$@vaadin/item",
-    "@vaadin/tabs": "$@vaadin/tabs",
-    "@vaadin/split-layout": "$@vaadin/split-layout",
-    "@vaadin/text-field": "$@vaadin/text-field",
-    "@vaadin/checkbox": "$@vaadin/checkbox",
-    "@vaadin/notification": "$@vaadin/notification",
-    "@vaadin/scroller": "$@vaadin/scroller",
-    "@vaadin/message-input": "$@vaadin/message-input",
-    "@vaadin/email-field": "$@vaadin/email-field",
-    "@vaadin/react-components": "$@vaadin/react-components",
-    "@vaadin/hilla-generator-plugin-model": "$@vaadin/hilla-generator-plugin-model",
-    "@vaadin/hilla-react-crud": "$@vaadin/hilla-react-crud",
-    "@vaadin/hilla-generator-plugin-subtypes": "$@vaadin/hilla-generator-plugin-subtypes",
-    "@vaadin/hilla-generator-utils": "$@vaadin/hilla-generator-utils",
-    "@vaadin/hilla-generator-plugin-barrel": "$@vaadin/hilla-generator-plugin-barrel",
-    "@vaadin/hilla-react-form": "$@vaadin/hilla-react-form",
-    "@vaadin/hilla-generator-core": "$@vaadin/hilla-generator-core",
-    "@vaadin/hilla-generator-plugin-push": "$@vaadin/hilla-generator-plugin-push",
-    "@vaadin/hilla-generator-plugin-client": "$@vaadin/hilla-generator-plugin-client",
-    "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "@vaadin/common-frontend": "$@vaadin/common-frontend",
+    "@vaadin/hilla-frontend": "$@vaadin/hilla-frontend",
     "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
-    "@vaadin/hilla-generator-cli": "$@vaadin/hilla-generator-cli",
-    "@vaadin/hilla-generator-plugin-backbone": "$@vaadin/hilla-generator-plugin-backbone",
-    "@vaadin/a11y-base": "$@vaadin/a11y-base",
-    "@vaadin/component-base": "$@vaadin/component-base",
-    "@vaadin/field-base": "$@vaadin/field-base",
-    "@vaadin/input-container": "$@vaadin/input-container",
-    "@vaadin/lit-renderer": "$@vaadin/lit-renderer",
-    "@vaadin/overlay": "$@vaadin/overlay",
-    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
-    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
-    "@vaadin/router": "$@vaadin/router",
-    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
+    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
+    "react-router-dom": "$react-router-dom",
+    "lit": "$lit",
+    "@polymer/polymer": "$@polymer/polymer",
+    "@vaadin/hilla-react-crud": "$@vaadin/hilla-react-crud",
+    "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
+    "@vaadin/hilla-react-form": "$@vaadin/hilla-react-form",
+    "proj4": "$proj4",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
-    "@vaadin/hilla-frontend": "$@vaadin/hilla-frontend"
+    "date-fns": "$date-fns"
   },
   "vaadin": {
     "dependencies": {
@@ -252,19 +243,10 @@
       "@vaadin/grid": "24.4.0-alpha13",
       "@vaadin/grid-pro": "24.4.0-alpha13",
       "@vaadin/hilla-frontend": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-cli": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-core": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-utils": "24.4.0-alpha4",
-      "@vaadin/hilla-lit-form": "24.4.0-alpha3",
-      "@vaadin/hilla-react-auth": "24.4.0-alpha3",
-      "@vaadin/hilla-react-crud": "24.4.0-alpha3",
-      "@vaadin/hilla-react-form": "24.4.0-alpha3",
+      "@vaadin/hilla-lit-form": "24.4.0-alpha4",
+      "@vaadin/hilla-react-auth": "24.4.0-alpha4",
+      "@vaadin/hilla-react-crud": "24.4.0-alpha4",
+      "@vaadin/hilla-react-form": "24.4.0-alpha4",
       "@vaadin/horizontal-layout": "24.4.0-alpha13",
       "@vaadin/icon": "24.4.0-alpha13",
       "@vaadin/icons": "24.4.0-alpha13",
@@ -321,6 +303,15 @@
       "@rollup/pluginutils": "5.1.0",
       "@types/react": "18.2.55",
       "@types/react-dom": "18.2.19",
+      "@vaadin/hilla-generator-cli": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-core": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha4",
+      "@vaadin/hilla-generator-utils": "24.4.0-alpha4",
       "@vitejs/plugin-react": "4.2.1",
       "async": "3.2.5",
       "glob": "10.3.10",
@@ -335,6 +326,6 @@
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "33b685dacc0f5d24418e87b79dfdd15f64fa97aee3f5f452b927689f892a258a"
+    "hash": "ee6e12917ba4792807250b8f176068520ff266cb8f7d90e44f19cedd2ae44346"
   }
 }
