--- a/package.json
+++ b/package.json
@@ -4,108 +4,46 @@
   "type": "module",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin-component-factory/vcf-nav": "1.1.0",
-    "@vaadin/a11y-base": "24.4.0-alpha13",
-    "@vaadin/accordion": "24.4.0-alpha13",
-    "@vaadin/app-layout": "24.4.0-alpha13",
-    "@vaadin/avatar": "24.4.0-alpha13",
-    "@vaadin/avatar-group": "24.4.0-alpha13",
-    "@vaadin/board": "24.4.0-alpha13",
-    "@vaadin/bundles": "24.4.0-alpha13",
-    "@vaadin/button": "24.4.0-alpha13",
-    "@vaadin/charts": "24.4.0-alpha13",
-    "@vaadin/checkbox": "24.4.0-alpha13",
-    "@vaadin/checkbox-group": "24.4.0-alpha13",
-    "@vaadin/combo-box": "24.4.0-alpha13",
+    "@vaadin/bundles": "24.4.0-alpha15",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/component-base": "24.4.0-alpha13",
-    "@vaadin/confirm-dialog": "24.4.0-alpha13",
-    "@vaadin/context-menu": "24.4.0-alpha13",
-    "@vaadin/cookie-consent": "24.4.0-alpha13",
-    "@vaadin/crud": "24.4.0-alpha13",
-    "@vaadin/custom-field": "24.4.0-alpha13",
-    "@vaadin/date-picker": "24.4.0-alpha13",
-    "@vaadin/date-time-picker": "24.4.0-alpha13",
-    "@vaadin/details": "24.4.0-alpha13",
-    "@vaadin/dialog": "24.4.0-alpha13",
-    "@vaadin/email-field": "24.4.0-alpha13",
-    "@vaadin/field-base": "24.4.0-alpha13",
-    "@vaadin/field-highlighter": "24.4.0-alpha13",
-    "@vaadin/form-layout": "24.4.0-alpha13",
-    "@vaadin/grid": "24.4.0-alpha13",
-    "@vaadin/grid-pro": "24.4.0-alpha13",
-    "@vaadin/hilla-frontend": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-cli": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-core": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha4",
-    "@vaadin/hilla-generator-utils": "24.4.0-alpha4",
-    "@vaadin/hilla-lit-form": "24.4.0-alpha3",
-    "@vaadin/hilla-react-auth": "24.4.0-alpha3",
-    "@vaadin/hilla-react-crud": "24.4.0-alpha3",
-    "@vaadin/hilla-react-form": "24.4.0-alpha3",
-    "@vaadin/horizontal-layout": "24.4.0-alpha13",
-    "@vaadin/icon": "24.4.0-alpha13",
-    "@vaadin/icons": "24.4.0-alpha13",
-    "@vaadin/input-container": "24.4.0-alpha13",
-    "@vaadin/integer-field": "24.4.0-alpha13",
-    "@vaadin/item": "24.4.0-alpha13",
-    "@vaadin/list-box": "24.4.0-alpha13",
-    "@vaadin/lit-renderer": "24.4.0-alpha13",
-    "@vaadin/login": "24.4.0-alpha13",
-    "@vaadin/map": "24.4.0-alpha13",
-    "@vaadin/menu-bar": "24.4.0-alpha13",
-    "@vaadin/message-input": "24.4.0-alpha13",
-    "@vaadin/message-list": "24.4.0-alpha13",
-    "@vaadin/multi-select-combo-box": "24.4.0-alpha13",
-    "@vaadin/notification": "24.4.0-alpha13",
-    "@vaadin/number-field": "24.4.0-alpha13",
-    "@vaadin/overlay": "24.4.0-alpha13",
-    "@vaadin/password-field": "24.4.0-alpha13",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha13",
-    "@vaadin/progress-bar": "24.4.0-alpha13",
-    "@vaadin/radio-group": "24.4.0-alpha13",
-    "@vaadin/react-components": "24.4.0-alpha13",
-    "@vaadin/rich-text-editor": "24.4.0-alpha13",
+    "@vaadin/hilla-frontend": "24.4.0-alpha7",
+    "@vaadin/hilla-lit-form": "24.4.0-alpha7",
+    "@vaadin/hilla-react-auth": "24.4.0-alpha7",
+    "@vaadin/hilla-react-crud": "24.4.0-alpha7",
+    "@vaadin/hilla-react-form": "24.4.0-alpha7",
+    "@vaadin/hilla-react-signals": "24.4.0-alpha7",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha15",
+    "@vaadin/react-components": "24.4.0-alpha15",
     "@vaadin/router": "1.7.5",
-    "@vaadin/scroller": "24.4.0-alpha13",
-    "@vaadin/select": "24.4.0-alpha13",
-    "@vaadin/side-nav": "24.4.0-alpha13",
-    "@vaadin/split-layout": "24.4.0-alpha13",
-    "@vaadin/tabs": "24.4.0-alpha13",
-    "@vaadin/tabsheet": "24.4.0-alpha13",
-    "@vaadin/text-area": "24.4.0-alpha13",
-    "@vaadin/text-field": "24.4.0-alpha13",
-    "@vaadin/time-picker": "24.4.0-alpha13",
-    "@vaadin/tooltip": "24.4.0-alpha13",
-    "@vaadin/upload": "24.4.0-alpha13",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha13",
-    "@vaadin/vaadin-material-styles": "24.4.0-alpha13",
-    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha13",
+    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha15",
+    "@vaadin/vaadin-material-styles": "24.4.0-alpha15",
+    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha15",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.4.0-alpha13",
-    "@vaadin/virtual-list": "24.4.0-alpha13",
-    "classnames": "^2.3.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
     "lit": "3.1.2",
     "proj4": "2.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "6.22.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.22.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7",
-    "@lit-labs/react": "^1.1.0",
     "@rollup/plugin-replace": "5.0.5",
     "@rollup/pluginutils": "5.1.0",
-    "@types/react": "18.2.55",
+    "@types/react": "18.2.57",
     "@types/react-dom": "18.2.19",
+    "@vaadin/hilla-file-router": "24.4.0-alpha7",
+    "@vaadin/hilla-generator-cli": "24.4.0-alpha7",
+    "@vaadin/hilla-generator-core": "24.4.0-alpha7",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha7",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha7",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha7",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha7",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha7",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha7",
+    "@vaadin/hilla-generator-utils": "24.4.0-alpha7",
     "@vitejs/plugin-react": "4.2.1",
     "async": "3.2.5",
     "glob": "10.3.10",
@@ -114,213 +52,55 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.3.3",
-    "vite": "5.1.1",
+    "vite": "5.1.4",
     "vite-plugin-checker": "0.6.4",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
     "workbox-precaching": "7.0.0"
   },
-  "overrides": {
-    "@vaadin/bundles": "$@vaadin/bundles",
-    "@vaadin/icon": "$@vaadin/icon",
-    "@vaadin/icons": "$@vaadin/icons",
-    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
-    "@vaadin/tooltip": "$@vaadin/tooltip",
-    "@vaadin/common-frontend": "$@vaadin/common-frontend",
-    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
-    "lit": "$lit",
-    "@polymer/polymer": "$@polymer/polymer",
-    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
-    "classnames": "$classnames",
-    "react": "$react",
-    "react-dom": "$react-dom",
-    "react-router-dom": "$react-router-dom",
-    "@vaadin/board": "$@vaadin/board",
-    "@vaadin/charts": "$@vaadin/charts",
-    "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
-    "@vaadin/crud": "$@vaadin/crud",
-    "@vaadin/grid-pro": "$@vaadin/grid-pro",
-    "@vaadin/map": "$@vaadin/map",
-    "@vaadin/rich-text-editor": "$@vaadin/rich-text-editor",
-    "@types/react-dom": "$@types/react-dom",
-    "@types/react": "$@types/react",
-    "@vaadin/form-layout": "$@vaadin/form-layout",
-    "@vaadin/checkbox-group": "$@vaadin/checkbox-group",
-    "@vaadin/list-box": "$@vaadin/list-box",
-    "@vaadin/upload": "$@vaadin/upload",
-    "@vaadin/app-layout": "$@vaadin/app-layout",
-    "@vaadin/integer-field": "$@vaadin/integer-field",
-    "@vaadin/select": "$@vaadin/select",
-    "@vaadin/confirm-dialog": "$@vaadin/confirm-dialog",
-    "@vaadin/grid": "$@vaadin/grid",
-    "@vaadin/tabsheet": "$@vaadin/tabsheet",
-    "@vaadin/text-area": "$@vaadin/text-area",
-    "@vaadin/context-menu": "$@vaadin/context-menu",
-    "@vaadin/password-field": "$@vaadin/password-field",
-    "@vaadin/date-time-picker": "$@vaadin/date-time-picker",
-    "@vaadin/progress-bar": "$@vaadin/progress-bar",
-    "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
-    "proj4": "$proj4",
-    "@vaadin/time-picker": "$@vaadin/time-picker",
-    "@vaadin/number-field": "$@vaadin/number-field",
-    "@vaadin/avatar-group": "$@vaadin/avatar-group",
-    "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
-    "@vaadin/login": "$@vaadin/login",
-    "@vaadin/side-nav": "$@vaadin/side-nav",
-    "@vaadin/details": "$@vaadin/details",
-    "@vaadin/button": "$@vaadin/button",
-    "@vaadin/accordion": "$@vaadin/accordion",
-    "@vaadin/avatar": "$@vaadin/avatar",
-    "@vaadin/radio-group": "$@vaadin/radio-group",
-    "@vaadin/horizontal-layout": "$@vaadin/horizontal-layout",
-    "date-fns": "$date-fns",
-    "@vaadin/virtual-list": "$@vaadin/virtual-list",
-    "@vaadin/combo-box": "$@vaadin/combo-box",
-    "@vaadin/menu-bar": "$@vaadin/menu-bar",
-    "@vaadin/message-list": "$@vaadin/message-list",
-    "@vaadin/custom-field": "$@vaadin/custom-field",
-    "@vaadin/field-highlighter": "$@vaadin/field-highlighter",
-    "@vaadin/date-picker": "$@vaadin/date-picker",
-    "@vaadin/dialog": "$@vaadin/dialog",
-    "@vaadin/item": "$@vaadin/item",
-    "@vaadin/tabs": "$@vaadin/tabs",
-    "@vaadin/split-layout": "$@vaadin/split-layout",
-    "@vaadin/text-field": "$@vaadin/text-field",
-    "@vaadin/checkbox": "$@vaadin/checkbox",
-    "@vaadin/notification": "$@vaadin/notification",
-    "@vaadin/scroller": "$@vaadin/scroller",
-    "@vaadin/message-input": "$@vaadin/message-input",
-    "@vaadin/email-field": "$@vaadin/email-field",
-    "@vaadin/react-components": "$@vaadin/react-components",
-    "@vaadin/hilla-generator-plugin-model": "$@vaadin/hilla-generator-plugin-model",
-    "@vaadin/hilla-react-crud": "$@vaadin/hilla-react-crud",
-    "@vaadin/hilla-generator-plugin-subtypes": "$@vaadin/hilla-generator-plugin-subtypes",
-    "@vaadin/hilla-generator-utils": "$@vaadin/hilla-generator-utils",
-    "@vaadin/hilla-generator-plugin-barrel": "$@vaadin/hilla-generator-plugin-barrel",
-    "@vaadin/hilla-react-form": "$@vaadin/hilla-react-form",
-    "@vaadin/hilla-generator-core": "$@vaadin/hilla-generator-core",
-    "@vaadin/hilla-generator-plugin-push": "$@vaadin/hilla-generator-plugin-push",
-    "@vaadin/hilla-generator-plugin-client": "$@vaadin/hilla-generator-plugin-client",
-    "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
-    "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
-    "@vaadin/hilla-generator-cli": "$@vaadin/hilla-generator-cli",
-    "@vaadin/hilla-generator-plugin-backbone": "$@vaadin/hilla-generator-plugin-backbone",
-    "@vaadin/a11y-base": "$@vaadin/a11y-base",
-    "@vaadin/component-base": "$@vaadin/component-base",
-    "@vaadin/field-base": "$@vaadin/field-base",
-    "@vaadin/input-container": "$@vaadin/input-container",
-    "@vaadin/lit-renderer": "$@vaadin/lit-renderer",
-    "@vaadin/overlay": "$@vaadin/overlay",
-    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
-    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
-    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
-    "@vaadin/router": "$@vaadin/router",
-    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
-    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
-    "@vaadin/hilla-frontend": "$@vaadin/hilla-frontend"
-  },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/a11y-base": "24.4.0-alpha13",
-      "@vaadin/accordion": "24.4.0-alpha13",
-      "@vaadin/app-layout": "24.4.0-alpha13",
-      "@vaadin/avatar": "24.4.0-alpha13",
-      "@vaadin/avatar-group": "24.4.0-alpha13",
-      "@vaadin/board": "24.4.0-alpha13",
-      "@vaadin/bundles": "24.4.0-alpha13",
-      "@vaadin/button": "24.4.0-alpha13",
-      "@vaadin/charts": "24.4.0-alpha13",
-      "@vaadin/checkbox": "24.4.0-alpha13",
-      "@vaadin/checkbox-group": "24.4.0-alpha13",
-      "@vaadin/combo-box": "24.4.0-alpha13",
+      "@vaadin/bundles": "24.4.0-alpha15",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/component-base": "24.4.0-alpha13",
-      "@vaadin/confirm-dialog": "24.4.0-alpha13",
-      "@vaadin/context-menu": "24.4.0-alpha13",
-      "@vaadin/cookie-consent": "24.4.0-alpha13",
-      "@vaadin/crud": "24.4.0-alpha13",
-      "@vaadin/custom-field": "24.4.0-alpha13",
-      "@vaadin/date-picker": "24.4.0-alpha13",
-      "@vaadin/date-time-picker": "24.4.0-alpha13",
-      "@vaadin/details": "24.4.0-alpha13",
-      "@vaadin/dialog": "24.4.0-alpha13",
-      "@vaadin/email-field": "24.4.0-alpha13",
-      "@vaadin/field-base": "24.4.0-alpha13",
-      "@vaadin/field-highlighter": "24.4.0-alpha13",
-      "@vaadin/form-layout": "24.4.0-alpha13",
-      "@vaadin/grid": "24.4.0-alpha13",
-      "@vaadin/grid-pro": "24.4.0-alpha13",
-      "@vaadin/hilla-frontend": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-cli": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-core": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha4",
-      "@vaadin/hilla-generator-utils": "24.4.0-alpha4",
-      "@vaadin/hilla-lit-form": "24.4.0-alpha3",
-      "@vaadin/hilla-react-auth": "24.4.0-alpha3",
-      "@vaadin/hilla-react-crud": "24.4.0-alpha3",
-      "@vaadin/hilla-react-form": "24.4.0-alpha3",
-      "@vaadin/horizontal-layout": "24.4.0-alpha13",
-      "@vaadin/icon": "24.4.0-alpha13",
-      "@vaadin/icons": "24.4.0-alpha13",
-      "@vaadin/input-container": "24.4.0-alpha13",
-      "@vaadin/integer-field": "24.4.0-alpha13",
-      "@vaadin/item": "24.4.0-alpha13",
-      "@vaadin/list-box": "24.4.0-alpha13",
-      "@vaadin/lit-renderer": "24.4.0-alpha13",
-      "@vaadin/login": "24.4.0-alpha13",
-      "@vaadin/map": "24.4.0-alpha13",
-      "@vaadin/menu-bar": "24.4.0-alpha13",
-      "@vaadin/message-input": "24.4.0-alpha13",
-      "@vaadin/message-list": "24.4.0-alpha13",
-      "@vaadin/multi-select-combo-box": "24.4.0-alpha13",
-      "@vaadin/notification": "24.4.0-alpha13",
-      "@vaadin/number-field": "24.4.0-alpha13",
-      "@vaadin/overlay": "24.4.0-alpha13",
-      "@vaadin/password-field": "24.4.0-alpha13",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha13",
-      "@vaadin/progress-bar": "24.4.0-alpha13",
-      "@vaadin/radio-group": "24.4.0-alpha13",
-      "@vaadin/react-components": "24.4.0-alpha13",
-      "@vaadin/rich-text-editor": "24.4.0-alpha13",
+      "@vaadin/hilla-frontend": "24.4.0-alpha7",
+      "@vaadin/hilla-lit-form": "24.4.0-alpha7",
+      "@vaadin/hilla-react-auth": "24.4.0-alpha7",
+      "@vaadin/hilla-react-crud": "24.4.0-alpha7",
+      "@vaadin/hilla-react-form": "24.4.0-alpha7",
+      "@vaadin/hilla-react-signals": "24.4.0-alpha7",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha15",
+      "@vaadin/react-components": "24.4.0-alpha15",
       "@vaadin/router": "1.7.5",
-      "@vaadin/scroller": "24.4.0-alpha13",
-      "@vaadin/select": "24.4.0-alpha13",
-      "@vaadin/side-nav": "24.4.0-alpha13",
-      "@vaadin/split-layout": "24.4.0-alpha13",
-      "@vaadin/tabs": "24.4.0-alpha13",
-      "@vaadin/tabsheet": "24.4.0-alpha13",
-      "@vaadin/text-area": "24.4.0-alpha13",
-      "@vaadin/text-field": "24.4.0-alpha13",
-      "@vaadin/time-picker": "24.4.0-alpha13",
-      "@vaadin/tooltip": "24.4.0-alpha13",
-      "@vaadin/upload": "24.4.0-alpha13",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha13",
-      "@vaadin/vaadin-material-styles": "24.4.0-alpha13",
-      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha13",
+      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha15",
+      "@vaadin/vaadin-material-styles": "24.4.0-alpha15",
+      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha15",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.4.0-alpha13",
-      "@vaadin/virtual-list": "24.4.0-alpha13",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
       "lit": "3.1.2",
       "proj4": "2.10.0",
       "react": "18.2.0",
       "react-dom": "18.2.0",
-      "react-router-dom": "6.22.0"
+      "react-router-dom": "6.22.1"
     },
     "devDependencies": {
       "@babel/preset-react": "^7",
       "@rollup/plugin-replace": "5.0.5",
       "@rollup/pluginutils": "5.1.0",
-      "@types/react": "18.2.55",
+      "@types/react": "18.2.57",
       "@types/react-dom": "18.2.19",
+      "@vaadin/hilla-file-router": "24.4.0-alpha7",
+      "@vaadin/hilla-generator-cli": "24.4.0-alpha7",
+      "@vaadin/hilla-generator-core": "24.4.0-alpha7",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha7",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha7",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha7",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha7",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha7",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha7",
+      "@vaadin/hilla-generator-utils": "24.4.0-alpha7",
       "@vitejs/plugin-react": "4.2.1",
       "async": "3.2.5",
       "glob": "10.3.10",
@@ -329,12 +109,38 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.3.3",
-      "vite": "5.1.1",
+      "vite": "5.1.4",
       "vite-plugin-checker": "0.6.4",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "33b685dacc0f5d24418e87b79dfdd15f64fa97aee3f5f452b927689f892a258a"
+    "hash": "46ab06519cc2f4e9fd79ba122378dff93f21782807217683a978f14befdb3f05"
+  },
+  "overrides": {
+    "@vaadin/bundles": "$@vaadin/bundles",
+    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
+    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
+    "@vaadin/router": "$@vaadin/router",
+    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
+    "@vaadin/react-components": "$@vaadin/react-components",
+    "@vaadin/common-frontend": "$@vaadin/common-frontend",
+    "react-dom": "$react-dom",
+    "@vaadin/hilla-frontend": "$@vaadin/hilla-frontend",
+    "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
+    "react": "$react",
+    "@vaadin/hilla-react-crud": "$@vaadin/hilla-react-crud",
+    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
+    "react-router-dom": "$react-router-dom",
+    "lit": "$lit",
+    "@polymer/polymer": "$@polymer/polymer",
+    "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
+    "@vaadin/hilla-react-form": "$@vaadin/hilla-react-form",
+    "@vaadin/hilla-react-signals": "$@vaadin/hilla-react-signals",
+    "date-fns": "$date-fns",
+    "proj4": "$proj4",
+    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
+    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles"
   }
 }
